--- a/lec/2.md
+++ b/lec/2.md
@@ -42,17 +42,17 @@ left   +  right
 
 
 let x = 3
-array = [1,2, x] // 连续分配的空间
-list = [1;2;x] // linked list 链表
-tuple = (x，'x') // (Int, Char) 组合不同类型的值，不可变
+array = [1,2, x] // 连续分配的空间 \
+list = [1;2;x] // linked list 链表 \
+tuple = (x，'x') // (Int, Char) 组合不同类型的值，不可变 
 
 
-ternary 三元表达式
-if cond then fst else snd
+ternary 三元表达式 \
+if cond then fst else snd \
 cond ? fst : snd
 
-cond : Boolean
-fst, snd the same Type 
-不可以只有一个分支，三元表达式 ！ 表达式， 不是语句，他有返回值
+cond : Boolean \
+fst, snd the same Type  \
+不可以只有一个分支，三元表达式 ！ 表达式， 不是语句，他有返回值 \
 
 不想有返回值，设置一个空的返回值，unit ()
