lec 4 lexing update 1

--- a/lec/4.md
+++ b/lec/4.md
@@ -4,6 +4,10 @@
   《计算理论基础》第2章 有穷自动机 张立昂 刘川 译 
 - Chapter 2 Scanning, *Engineering a Compiler*, Keith D.Cooper & Linda Torczon.
 
+## 代码 Codes
+见[../jsfrontend/lexer](../jsfrontend/lexer)
+
+
 ## 笔记 Notes
 - 0 确定性有穷自动机 Deterministic Finite Automata, DFA \
   ![](./4-0.png)
